; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_select.c_menu_cbs_init_bind_select.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_select.c_menu_cbs_init_bind_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@action_select_default = common dso_local global i32 0, align 4
@MENU_SETTINGS_CORE_OPTION_START = common dso_local global i32 0, align 4
@MENU_SETTINGS_CHEEVOS_START = common dso_local global i32 0, align 4
@action_select_core_setting = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_CONNECT_NETPLAY_ROOM = common dso_local global i64 0, align 8
@action_select_netplay_connect_room = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @menu_cbs_init_bind_select(%struct.TYPE_6__* %0, i8* %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %13 = icmp ne %struct.TYPE_6__* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %43

15:                                               ; preds = %5
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %17 = load i32, i32* @action_select_default, align 4
  %18 = call i32 @BIND_ACTION_SELECT(%struct.TYPE_6__* %16, i32 %17)
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @MENU_SETTINGS_CORE_OPTION_START, align 4
  %21 = icmp uge i32 %19, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %15
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* @MENU_SETTINGS_CHEEVOS_START, align 4
  %25 = icmp ult i32 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %28 = load i32, i32* @action_select_core_setting, align 4
  %29 = call i32 @BIND_ACTION_SELECT(%struct.TYPE_6__* %27, i32 %28)
  store i32 0, i32* %6, align 4
  br label %43

30:                                               ; preds = %22, %15
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = call i64 @menu_cbs_init_bind_select_compare_label(%struct.TYPE_6__* %31, i8* %32)
  %34 = icmp eq i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %30
  store i32 0, i32* %6, align 4
  br label %43

36:                                               ; preds = %30
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %38 = load i32, i32* %10, align 4
  %39 = call i64 @menu_cbs_init_bind_select_compare_type(%struct.TYPE_6__* %37, i32 %38)
  %40 = icmp eq i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  store i32 0, i32* %6, align 4
  br label %43

42:                                               ; preds = %36
  store i32 -1, i32* %6, align 4
  br label %43

43:                                               ; preds = %42, %41, %35, %26, %14
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

declare dso_local i32 @BIND_ACTION_SELECT(%struct.TYPE_6__*, i32) #1

declare dso_local i64 @menu_cbs_init_bind_select_compare_label(%struct.TYPE_6__*, i8*) #1

declare dso_local i64 @menu_cbs_init_bind_select_compare_type(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
